welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: '=' expected but ';' found.
  for (i<- 0 to l-1){
^