welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  val l=len(nums)
  var resultat=-1
  for (i<- 0 to l-1){
    if (nums(i)==lookingFor) {resultat=i}
  }
  return resultat
}